# echoScan

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: competitor_sample.txt  distinctive_sample.txt  generic_sample.txt
src/echoscan/: __init__.py  cli.py  genericness.py  information_gain.py  models.py  overlap.py  patterns.py  report.py  textutils.py
tests/: test_cli.py  test_genericness.py  test_information_gain.py  test_overlap.py  test_report.py
