[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echoscan"
version = "0.1.0"
description = "EchoScan — Content Distinctiveness & Information-Gain Auditor. Built by Brewcontent.ai."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Brewcontent.ai", email = "cloudangles@cloudangles.com" }
]
keywords = ["marketing", "content", "seo", "ai", "content-audit", "brewcontent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[project.scripts]
echoscan = "echoscan.cli:main"

[project.urls]
Homepage = "https://github.com/brewcontentai/echoScan"
Repository = "https://github.com/brewcontentai/echoScan"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
# Coverage flags are intentionally not in addopts: they require the
# pytest-cov dev dependency, which isn't installed by a bare
# `pip install -e .`. Run `pytest --cov=echoscan --cov-report=term-missing`
# directly (as CI does) once you've installed the `[dev]` extra.

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
